# VirtualMath

./: .gitignore  CMakeLists.txt  README.md  main.c
VirtulMathCore/: CMakeLists.txt
VirtulMathCore/file/: file.c
VirtulMathCore/gc/: gc.c  set.c
VirtulMathCore/include/: __macro.h  __virtualmath.h  clib.h  gc.h  grammar.h  handler.h  inter.h  lexical.h  macro.h  mem.h  ofunc.h  parameter.h  run.h  statement.h  syntax.h  token.h  value.h  var.h  virtualmath.h
VirtulMathCore/include/win/: getopt_win.h
VirtulMathCore/md5/: md5.c
VirtulMathCore/md5/include/: __md5.h
VirtulMathCore/memory/: mem.c
VirtulMathCore/ofunc/clib/: manager.c
VirtulMathCore/ofunc/include/: __ofunc.h  bool.h  dict.h  dictiter.h  dou.h  file_.h  function.h  int.h  io.h  lib_.h  listiter.h  num.h  object.h  pass.h  pointer.h  str.h  sys.h  vobject.h
VirtulMathCore/ofunc/src/: __ofunc.c  bool.c  dict.c  dictiter.c  dou.c  error_.c  file_.c  function.c  int.c  io.c  lib_.c  list.c  listiter.c  num.c  object.c  pass.c  pointer.c  str.c  sys.c  vobject.c
VirtulMathCore/parser/: __grammar.c  grammar.c  lexical.c  syntax.c  token.c
VirtulMathCore/parser/include/: __grammar.h
VirtulMathCore/src/: __run.c  inter.c  ofunc.c  parameter.c  run.c  runbranch.c  runcall.c  runfile.c  runoperation.c  statement.c  value.c  var.c  virtualmath.c
VirtulMathCore/src/include/: __run.h
VirtulMathCore/src/win/: dlfcn_win32.c  getopt_win.c
argument/: argument.c
file/: file.c
gc/: freeze.c  gc.c  set.c
include/: __grammar.h  __macro.h  __run.h  __syntax.h  __token.h  __virtualmath.h  arguement.h  file.h  function.h  gc.h  grammar.h  handler.h  hellovm.h  inter.h  lexical.h  log.h  macro.h  mem.h  ofunc.h  parameter.h  run.h  statement.h  syntax.h  token.h  value.h  var.h  virtualmath.h
memory/: mem.c
ofunc/c_lib/: manager.c
ofunc/include/: __base.h  __ofunc.h  bool.h  dict.h  dictiter.h  error_.h  function.h  io.h  list.h  listiter.h  num.h  object.h  pass.h  str.h  sys.h  vobject.h
ofunc/src/: __ofunc.c  bool.c  dict.c  dictiter.c  error_.c  function.c  io.c  list.c  listiter.c  num.c  object.c  pass.c  str.c  sys.c  vobject.c
parser/: __grammar.c  grammar.c  lexical.c  syntax.c  token.c
parser/include/: __grammar.h  __lexical.h  __token.h
signalhandler/: handler.c
src/: __run.c  inter.c  ofunc.c  operation.c  parameter.c  run.c  runbranch.c  runcall.c  runfile.c  runoperation.c  statement.c  value.c  var.c  virtualmath.c
src/include/: __run.h
vm_lib/: hello.vm
vmcore/: CMakeLists.txt
vmcore/clib/: CMakeLists.txt
vmcore/file/: CMakeLists.txt  file.c
vmcore/gc/: CMakeLists.txt  gc.c
vmcore/include/: __macro.h  __virtualmath.h  clib.h  file.h  gc.h  grammar.h  handler.h  inter.h  lexical.h  macro.h  md5.h  mem.h  ofunc.h  parameter.h  run.h  statement.h  syntax.h  token.h  value.h  var.h  virtualmath.h
vmcore/md5/: CMakeLists.txt
vmcore/memory/: CMakeLists.txt  mem.c
vmcore/ofunc/: CMakeLists.txt
vmcore/ofunc/clib/: CMakeLists.txt  lib.h  manager.c  sys_lib.c  sys_time.c
vmcore/ofunc/clib/src/: CMakeLists.txt  sys_lib.c  time_lib.c
vmcore/ofunc/include/: __base.h  __ofunc.h  dict.h  error_.h  function.h  io.h  list.h  listiter.h  object.h  str.h  struct_.h  sys.h
vmcore/ofunc/src/: CMakeLists.txt  __ofunc.c  bool.c  dict.c  dictiter.c  dou.c  error_.c  file_.c  function.c  int.c  io.c  lib_.c  list.c  listiter.c  object.c  pass.c  pointer.c  str.c  struct_.c  sys.c  vobject.c
vmcore/ofunc/src/vmobj/: CMakeLists.txt  dict.c  dou.c  file_.c  function.c  lib_.c  object.c  pointer.c  sys.c
vmcore/parser/: CMakeLists.txt  __grammar.c  grammar.c  lexical.c  syntax.c  token.c
vmcore/parser/include/: __grammar.h
vmcore/signalhandler/: CMakeLists.txt  handler.c
vmcore/src/: CMakeLists.txt  __run.c  inter.c  ofunc.c  parameter.c  run.c  runbranch.c  runcall.c  runfile.c  runoperation.c  statement.c  value.c  var.c  virtualmath.c
vmcore/src/include/: __run.h
vmcore/vmlib/: hello.vm
