CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(vm_file C)
SET(CMAKE_C_STANDARD 11)

INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
AUX_SOURCE_DIRECTORY(${vm_file_SOURCE_DIR} VM_FILE_SRC)

ADD_LIBRARY(vm_file SHARED ${VM_FILE_SRC})
SET_TARGET_PROPERTIES(vm_file PROPERTIES OUTPUT_NAME "vmio")
INSTALL(TARGETS vm_file)
