CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(vm_memory C)
SET(CMAKE_C_STANDARD 11)

INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
AUX_SOURCE_DIRECTORY(${vm_memory_SOURCE_DIR} VM_MEM_SRC)

ADD_LIBRARY(vm_memory SHARED ${VM_MEM_SRC})
SET_TARGET_PROPERTIES(vm_memory PROPERTIES OUTPUT_NAME "mem")
INSTALL(TARGETS vm_memory)
