CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(vm_signal C)
SET(CMAKE_C_STANDARD 11)

INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
AUX_SOURCE_DIRECTORY(${vm_signal_SOURCE_DIR} VM_SIGNAL_SRC)

ADD_LIBRARY(vm_signal SHARED ${VM_SIGNAL_SRC})
SET_TARGET_PROPERTIES(vm_signal PROPERTIES OUTPUT_NAME "signal")
INSTALL(TARGETS vm_signal)
