CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(vm_clib C)
SET(CMAKE_C_STANDARD 11)

INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
INCLUDE_DIRECTORIES(${OFUNC_INCLUDE_DICT} BEFORE)

ADD_LIBRARY(vm_clib SHARED ${vm_clib_SOURCE_DIR}/manager)
SET_TARGET_PROPERTIES(vm_clib PROPERTIES OUTPUT_NAME "clib")

ADD_SUBDIRECTORY(${vm_clib_SOURCE_DIR}/src)
INSTALL(TARGETS vm_clib)
