CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(vm_obj C)
SET(CMAKE_C_STANDARD 11)

ADD_SUBDIRECTORY(${vm_obj_SOURCE_DIR}/vmobj)

INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
INCLUDE_DIRECTORIES(${OFUNC_INCLUDE_DICT} BEFORE)
AUX_SOURCE_DIRECTORY(${vm_obj_SOURCE_DIR} VM_OBJ_SRC)

ADD_LIBRARY(vm_obj SHARED ${VM_OBJ_SRC})
TARGET_LINK_LIBRARIES(vm_obj ${OBJ_LIST})  # 基础的obj类型直接链接
SET_TARGET_PROPERTIES(vm_obj PROPERTIES OUTPUT_NAME "vmobj")
INSTALL(TARGETS vm_obj)
