CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
SET(CMAKE_C_STANDARD 11)

INCLUDE_DIRECTORIES(${VMCORE_INCLUDE_DICT} BEFORE)
INCLUDE_DIRECTORIES(${OFUNC_INCLUDE_DICT} BEFORE)

SET(_OBJ_LIST)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SRC_FILES)
FOREACH(FILE_PATH ${SRC_FILES})
    STRING(REGEX REPLACE ".+/(.+)\\..*" "\\1" FILE_NAME ${FILE_PATH})
    ADD_LIBRARY(${FILE_NAME} SHARED ${FILE_PATH})
    SET(_OBJ_LIST ${_OBJ_LIST} ${FILE_NAME})
    SET_TARGET_PROPERTIES(${FILE_NAME} PROPERTIES OUTPUT_NAME ${FILE_NAME})
    INSTALL(TARGETS ${FILE_NAME})
ENDFOREACH(FILE_PATH)
SET(OBJ_LIST ${_OBJ_LIST} CACHE INTERNAL "OBJ_LIST" FORCE)  # 作为全局变量